# cursor-use

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  TREE.md  main.py  pyproject.toml
.agents/skills/prompt-engineering/: SKILL.md
.agents/skills/python-uv-workflow/: SKILL.md
.cursor/: environment.json
.github/workflows/: monthly-expenses.yml
expenses-tracker/: README.md  config.toml
expenses-tracker/assets/: report.css
expenses-tracker/lib/: agent_api.py  agent_prompt.py  config.py  r2_util.py  report_html.py  report_key.py  statement_parse.py  statistics.py  transactions.py
expenses-tracker/scripts/: _bootstrap.py  clean_markdown.py  generate_report.py  process_bills.py  send_report.py  setup_agent.py  trigger_monthly.py
expenses-tracker/skills/automation-api/: SKILL.md
expenses-tracker/skills/clean/: SKILL.md
expenses-tracker/skills/config/: SKILL.md
expenses-tracker/skills/email/: SKILL.md
expenses-tracker/skills/pipeline/: SKILL.md
expenses-tracker/skills/report/: SKILL.md
expenses-tracker/templates/: cleaned-statement.template.md
expenses-tracker/workers/email-ingest/: package-lock.json  package.json  wrangler.toml
expenses-tracker/workers/email-ingest/src/: index.js
